<resources>
    <string name="app_name">Flysys</string>
    <string name="menu_icon">menu icon</string>
    <string name="joke">Fotito</string>
    <string name="offer_info">About flight</string>
    <string name="offer_price">Price</string>
    <string name="airport_info">Airport</string>
    <string name="airport_info_2">City</string>
    <string name="airport_distance">Distance</string>
    <string name="load_data">Data</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="you">You</string>
    <string name="bin">Bin</string>
    <string name="toBin">moved to Bin</string>
    <string name="eliminated">"deleted"</string>
    <string name="undo">moved to My Flights</string>
    <string name="action_settings">Settings</string>
    <string name="action_offer_search">Offers search</string>
    <string name="search_title">Search offers</string>
    <string name="title_activity_flight">FlightActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="loading_offers">Loading the best offers</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>


    <string-array name="money_titles">
        <item>Argentine Peso</item>
        <item>US Dollar</item>
        <item>Brazilian Real</item>
    </string-array>
    <string-array name="money_values">
        <item>ARS</item>
        <item>USD</item>
        <item>BRL</item>
    </string-array>

    <string-array name="measure_titles">
        <item>Kilometres</item>
        <item>Miles</item>
    </string-array>
    <string-array name="measure_values">
        <item>KM</item>
        <item>MI</item>
    </string-array>

    <string-array name="interval_titles">
        <item>Hourly</item>
        <item>Every 6 hours</item>
        <item>Every 12 hours</item>
        <item>Once per day</item>
        <item>Never(Manual)</item>
        <item>Every 5 minutes</item>
        <item>Every 1 minute</item>
    </string-array>
    <string-array name="interval_values">
        <item>1h</item>
        <item>6h</item>
        <item>12h</item>
        <item>24h</item>
        <item>0h</item>
        <item>5m</item>
        <item>1m</item>
    </string-array>


    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>


    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="geo_summary">IDK the fuck to put here</string>
    <string name="geo_msg">Activate geolocation</string>
    <string name="money_type">Currency</string>
    <string name="measure_type">Unit</string>
    <string name="notif_activ">Activate notifications</string>
    <string name="offers_active">Activate offer alerts</string>
    <string name="update_interval">Update frequency</string>
    <string name="offer_results">Results</string>
    <string name="map_status_text">Search flight</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_comment_dialog_header">Leave a comment</string>
    <string name="fragment_comment_dialog_friendliness">Friendliness</string>
    <string name="fragment_comment_dialog_food">Food</string>
    <string name="fragment_comment_dialog_punctuality">Punctuality</string>
    <string name="fragment_comment_dialog_mileage_programe">Frequent-flyer program</string>
    <string name="fragment_comment_dialog_comfort">Comfort</string>
    <string name="fragment_comment_dialog_quality_price">Price vs. quality</string>
    <string name="flight_comment_dialog_send">SEND</string>
    <string name="comentario">Comment</string>
    <string name="cerrar">CLOSE</string>
    <string name="flight_comment_dialog_close">CLOSE</string>
    <string name="comments_refresh">Update</string>
    <string name="comments_sort_asc">Sort in ascending order</string>
    <string name="comments_sort_desc">Sort in descending order</string>
    <string name="approximate_date">Approximate Date</string>
    <string name="within_1_month">Within 1 month</string>
    <string name="within_3_months">Within 3 months</string>
    <string name="within_6_months">Within 6 months</string>
    <string name="after_1_year">After 1 year</string>
    <string name="within_1_year">Within 1 year</string>
    <string name="motto">Flying is our passion</string>
    <string name="title_activity_airports">Airports</string>
    <string name="title_activity_offers">Offers</string>
    <string name="title_activity_flights">My Flights</string>
    <string name="offers_to">Offers to</string>
    <string name="flight_number">Flight Number</string>
    <string name="airline_identifier">Airline Identifier</string>
    <string name="no_internet_msg">Please check your internet connection</string>
    <string name="flight_comments_dialog_header">Recommend flight</string>
    <string name="flight_comment_dialog_thumbs_up">Recommended</string>
    <string name="flight_comments_dialog_thumbs_down">Not recommended</string>
    <string name="flight_info_status">Status</string>
    <string name="flight_info_airline">Airline</string>
    <string name="flight_info_origin">Origin</string>
    <string name="flight_info_origin_airport">Departure airport</string>
    <string name="flight_info_destination">Destination</string>
    <string name="flight_info_destination_airport">Arrival airport</string>
    <string name="flight_info_departure_airport_terminal">Departure gate</string>
    <string name="flight_info_arrival_airport_terminal">Arrival gate</string>
    <string name="flight_info_departure_date">Departure date</string>
    <string name="flight_info_boarding_time">Boarding time</string>
    <string name="flight_info_scheduled_boarding_time">Scheduled boarding time</string>
    <string name="flight_info_departure_time">Departure time</string>
    <string name="flight_info_scheduled_departure_time">Scheduled departure time</string>
    <string name="flight_info_arrival_time">Arrival time</string>
    <string name="flight_info_scheduled_arrival_time">Scheduled arrival time</string>
    <string name="flight_info_status_landed">Landed</string>
    <string name="flight_info_status_scheduled">Scheduled</string>
    <string name="flight_info_status_boarding">Boarding</string>
    <string name="flight_info_status_divert">Diverted</string>
    <string name="flight_info_status_cancelled">Cancelled</string>
    <string name="flight_info_status_unknown">Unknown</string>
    <string name="flight">Flight</string>
    <string name="flight_info_not_found">Flight not found</string>
    <string name="title_activity_map">Map</string>
    <string name="wrong_city_msg">Enter a valid city</string>
    <string name="air_identifier_missing">Enter the airline identifier</string>
    <string name="air_identifier_error">The airline identifier must have only two alphanumeric characters</string>
    <string name="flight_missing">Enter the flight number</string>
    <string name="flight_error">The flight number should only contain numbers</string>
    <string name="flight_info_more">Read more info</string>
    <string name="flight_comments_more">Read more comments</string>
    <string name="flight_info_status_flying">Flying</string>
    <string name="flight_description_header_boarding">Departing in %1$s.</string>
    <string name="flight_description_header_scheduled">Boarding in %1$s.</string>
    <string name="flight_description_header_flying">Landing in %1$s</string>
    <string name="flight_description_header_landed">Landed %1$s ago.</string>
    <string name="flight_descriptin_header_cancelled">The flight was cancelled.</string>
    <string name="day">day</string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>
    <string name="flight_description_delay">(There is a %1$s delay)</string>
    <string name="results_error">No offers found</string>
    <string name="following">Following</string>
    <string name="unfollowing">Unfollowing</string>
    <string name="bin_empty">The bin is empty</string>
    <string name="flights_empty">You are not following any flights"\n"Press the search button to find your flight</string>
    <string name="gate">Gate</string>
    <string name="correct_comment">Your review was submitted</string>
    <string name="no_internet_msg_comment">Your review wasn\'t submitted. Please check your internet connection</string>
</resources>
