<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_flights"
            android:icon="@drawable/ic_local_airport_black_24dp"
            android:title="@string/title_activity_flights" />
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_label_black_24dp"
            android:title="@string/title_activity_offers" />
        <item
            android:id="@+id/nav_airports"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/title_activity_airports" />

            <item
                android:id="@+id/nav_bin"
                android:icon="@drawable/ic_delete_black_24dp"
                android:title="@string/bin" />
            <item
                android:id="@+id/nav_configuration"
                android:icon="@drawable/ic_build_black_24dp"
                android:title="@string/title_activity_settings" />

    </group>

</menu>
