<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
>


    <ImageView
        android:id="@+id/offer_photo2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/menu_icon" />
    <TextView
        android:id="@+id/offer_info2"
        android:textColor="#FFFFFF"
        android:layout_width="150dp"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        android:text="@string/offer_info"
        android:layout_below="@+id/offer_photo2"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:id="@+id/offer_price2"
        android:textColor="#FFFFFF"
        android:layout_width="150dp"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        android:text="@string/offer_price"
        android:layout_below="@+id/offer_info2"
        android:layout_alignParentStart="true" />



</RelativeLayout>
