<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nmarcantonio.flysys2.CommentDialogFragment">
    <LinearLayout
        android:id="@+id/flight_comment_dialog"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        >

        <!-- TODO: Update blank fragment layout -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:id="@+id/flight_post_comment"
            android:gravity="center_horizontal"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="24dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/flight_comments_dialog_header"
                android:clipToPadding="false"
                android:text="@string/flight_comments_dialog_header"
                android:textSize="20sp"
                android:textColor="#000000"
                android:textColorHint="#ff0000"
                android:gravity="center_horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/flight_comments_dialog_header"
                android:paddingStart="24dp"
                android:paddingEnd="24dp">
                <ImageButton
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_thumb_up_black_24dp"
                    android:id="@+id/flight_comments_dialog_thumbs_up"
                    android:clickable="true"
                    android:backgroundTint="@android:color/white"
                    android:contentDescription="@string/flight_comment_dialog_thumbs_up"
                    />
                <ImageButton
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_thumb_down_black_24dp"
                    android:layout_toEndOf="@id/flight_comments_dialog_thumbs_up"
                    android:clickable="true"
                    android:backgroundTint="@android:color/white"
                    android:id="@+id/flight_comments_dialog_thumbs_down"
                    android:contentDescription="@string/flight_comments_dialog_thumbs_down"
                    />
            </RelativeLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_comment_dialog_friendliness"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            />


        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.RatingBar"
            android:theme="@style/RatingBar"
            android:id="@+id/flight_comment_dialog_friendliness"
            android:numStars="5"
            android:isIndicator="false"
            android:rating="2.5"
            android:stepSize="0.5"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_comment_dialog_food"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"/>
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.RatingBar"
            android:theme="@style/RatingBar"
            android:id="@+id/flight_comment_dialog_food"
            android:numStars="5"
            android:isIndicator="false"
            android:rating="2.5"
            android:stepSize="0.5"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_comment_dialog_punctuality"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"/>
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.RatingBar"
            android:theme="@style/RatingBar"
            android:id="@+id/flight_comment_dialog_puntctuality"
            android:numStars="5"
            android:isIndicator="false"
            android:rating="2.5"
            android:stepSize="0.5"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_comment_dialog_mileage_programe"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            />
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.RatingBar"
            android:theme="@style/RatingBar"
            android:id="@+id/flight_comment_dialog_mileage_programe"
            android:numStars="5"
            android:isIndicator="false"
            android:rating="2.5"
            android:stepSize="0.5"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_comment_dialog_comfort"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            />
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.RatingBar"
            android:theme="@style/RatingBar"
            android:id="@+id/flight_comment_dialog_comfort"
            android:numStars="5"
            android:isIndicator="false"
            android:rating="2.5"
            android:stepSize="0.5"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_comment_dialog_quality_price"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"/>
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.RatingBar"
            android:theme="@style/RatingBar"
            android:id="@+id/flight_comment_dialog_quality_price"
            android:numStars="5"
            android:isIndicator="false"
            android:rating="2.5"
            android:stepSize="0.5"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/flight_comment_dialog_comment"
            android:inputType="textMultiLine"
            android:maxLength="250"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/comentario"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flight_comment_dialog_send"
                style="@style/AppTheme"
                android:layout_gravity="end"
                android:textColor="@color/md_blue_700"
                android:layout_margin="8dp"
                android:elevation="0dp"
                android:hint="@string/flight_comment_dialog_send"
                android:background="?attr/selectableItemBackground"
                android:id="@+id/flight_comment_dialog_send_button"
                android:layout_alignParentEnd="true"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flight_comment_dialog_close"
                android:textColor="@color/md_blue_700"
                android:layout_margin="8dp"
                android:elevation="0dp"
                android:hint="@string/flight_comment_dialog_send"
                android:background="?attr/selectableItemBackground"
                android:id="@+id/flight_comment_dialog_close_button"
                android:layout_toStartOf="@id/flight_comment_dialog_send_button"
                style="@style/AppTheme"
                />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>