<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dip"
        android:textSize="20sp"
        android:text="@string/approximate_date" />



        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/filter_table"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:stretchColumns="1" >

            <TableRow
                android:id="@+id/one_month"
                android:background="?android:attr/selectableItemBackground">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:tint="#9e9e9e"
                    android:src="@drawable/ic_today_black_24px" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:padding="3dip"
                    android:text="@string/within_1_month" />
        </TableRow>

            <TableRow
                android:background="?android:attr/selectableItemBackground">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:tint="#9e9e9e"
                    android:src="@drawable/ic_today_black_24px" />

                <TextView
                    android:id="@+id/three_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dip"
                    android:layout_marginTop="15dp"
                    android:text="@string/within_3_months" />
            </TableRow>

            <TableRow
                android:background="?android:attr/selectableItemBackground">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:tint="#9e9e9e"
                    android:src="@drawable/ic_today_black_24px" />

                <TextView
                    android:id="@+id/six_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dip"
                    android:layout_marginTop="15dp"
                    android:text="@string/within_6_months" />
            </TableRow>

            <TableRow
                android:background="?android:attr/selectableItemBackground">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:tint="#9e9e9e"
                    android:src="@drawable/ic_today_black_24px" />

                <TextView
                    android:id="@+id/one_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dip"
                    android:layout_marginTop="15dp"
                    android:text="@string/within_1_year" />
            </TableRow>

            <TableRow
                android:background="?android:attr/selectableItemBackground">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:tint="#9e9e9e"
                    android:src="@drawable/ic_today_black_24px" />

                <TextView
                    android:id="@+id/more_one_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dip"
                    android:layout_marginTop="15dp"
                    android:text="@string/after_1_year" />
            </TableRow>

        </TableLayout>


</LinearLayout>